force-app/main/default/objects/BWP_Processor_Config__c/fields/Historical_Product_Sync_Last_Run__c.field-meta.xml
<CustomField>
    <fullName>Historical_Product_Sync_Last_Run__c</fullName>
    <label>Historical Product Sync Last Run</label>
    <type>DateTime</type>
</CustomField>