force-app/main/default/objects/BWP_Processor_Config__c/fields/Hourly_Price_Sync_Last_Run__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Price_Sync_Last_Run__c</fullName>
    <label>Hourly Price Sync Last Run</label>
    <type>DateTime</type>
</CustomField>