force-app/main/default/objects/BWP_Processor_Config__c/fields/Regular_Product_Sync_Last_Run__c.field-meta.xml
<CustomField>
    <fullName>Regular_Product_Sync_Last_Run__c</fullName>
    <label>Regular Product Sync Last Run</label>
    <type>DateTime</type>
</CustomField>