force-app/main/default/objects/BWP_Processor_Config__c/fields/Test_Field3__c.field-meta.xml
<CustomField>
    <fullName>Test_Field3__c</fullName>
    <label>Test Field3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>